fix: replace opencv-python with opencv-python-headless for Railway deployment
- Use opencv-python-headless to avoid libGL.so.1 dependency error
- Headless version works in server environments without GUI libraries
- Fixes ImportError: libGL.so.1: cannot open shared object file
- All image processing functionality remains the same

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 # Includes core library dependencies plus web framework dependencies
 
 # Core image transformation library dependencies
-opencv-python
+opencv-python-headless
 numpy
 matplotlib
 
