--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@ __pycache__/
 *$py.class
 *.so
 .Python
-*venv/
+venv/
 env/
+ENV/
 build/
 develop-eggs/
 dist/
@@ -24,12 +25,15 @@ wheels/
 .pytest_cache/
 .coverage
 htmlcov/
+.python-version
 
 # JavaScript/Node
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
 .env
 .env.local
 .env.development.local
@@ -53,5 +57,8 @@ build/
 *.min.css
 
 # Logs
-logs
+logs/
 *.log
+
+# Railway / Deployment
+.railway/
